--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="js/script.js" defer></script>
+    <link rel="stylesheet" href="css/style.css">
     <title>JuliaSet</title>
 </head>
 <body>
-    
+    <div class="container">
+        <canvas id="canvas">
+        </canvas>
+    </div>
 </body>
 </html>
